[tool.poetry]
name = "funding-service"
version = "0.1.0"
description = ""
authors = ["Léo Schoukroun <leopaul36@yahoo.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
web3 = "^5.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
